[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/chivo/chivo.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/SelectionListStandard/Assets/WhiteLine_5x5.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/SelectionListStandard/SelectionListStandard.gd" type="Script" id=3]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/ModeSelectionPanelV2/Assets/ModeSelectionPanelV2_Background_Normal.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="SelectionListStandard" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 60.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Header" type="MarginContainer" parent="VBoxContainer"]
margin_right = 60.0
margin_bottom = 39.0
rect_min_size = Vector2( 60, 30 )
mouse_filter = 2

[node name="Background" type="TextureRect" parent="VBoxContainer/Header"]
margin_right = 60.0
margin_bottom = 39.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Left" type="TextureRect" parent="VBoxContainer/Header"]
margin_right = 5.0
margin_bottom = 39.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="VBoxContainer/Header"]
margin_left = 55.0
margin_right = 60.0
margin_bottom = 39.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Top" type="TextureRect" parent="VBoxContainer/Header"]
margin_right = 60.0
margin_bottom = 5.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Bottom" type="TextureRect" parent="VBoxContainer/Header"]
margin_top = 34.0
margin_right = 60.0
margin_bottom = 39.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TextContainer" type="MarginContainer" parent="VBoxContainer/Header"]
margin_right = 60.0
margin_bottom = 39.0
mouse_filter = 2
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 8

[node name="HeaderLabel" type="Label" parent="VBoxContainer/Header/TextContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 53.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Content" type="MarginContainer" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 60.0
margin_bottom = 79.0
rect_min_size = Vector2( 60, 40 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background2" type="TextureRect" parent="VBoxContainer/Content"]
margin_right = 60.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Left2" type="TextureRect" parent="VBoxContainer/Content"]
margin_right = 5.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Right2" type="TextureRect" parent="VBoxContainer/Content"]
margin_left = 55.0
margin_right = 60.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Bottom2" type="TextureRect" parent="VBoxContainer/Content"]
margin_top = 35.0
margin_right = 60.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="ContentMarginer" type="MarginContainer" parent="VBoxContainer/Content"]
margin_right = 60.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Content/ContentMarginer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 53.0
margin_bottom = 33.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContentList" type="VBoxContainer" parent="VBoxContainer/Content/ContentMarginer/ScrollContainer"]
margin_right = 46.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
